[B]Version 1.1.36[/B]
- Add sxyprn
- Fix OK XXX playback